[package]
name = "sandown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_pixel_buffer = { version = "0.4", features = ["egui", "rayon", "rand"] }
bevy_egui = "0.20"
rand = "0.8.5"
cfg-if = "1.0.0"
rand_xoshiro = "0.6.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

